# docu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/cli/: command.rs
src/config/: config.toml  configuration.rs  generate.rs  load.rs  mod.rs  theme.rs
src/database/: connect.rs  data_types.rs  database.rs  mod.rs  scriptlet.rs  tool.rs  tool_to_scriptlet.rs
src/display/: mod.rs  scriptlets.rs
src/errors/: error.rs
src/parse/: parser.rs
src/tui/: mod.rs  print.rs  syntax_highlight.rs
wix/: main.wxs
