[package]
name = "docu"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/Magic-JD/docu"
homepage = "https://github.com/Magic-JD/docu"
description = "Document your favourite scriptlets for fast reference."
authors = ["Joseph Daunt"]

[package.metadata.wix]
upgrade-guid = "7FF9AB65-49EF-4CC5-B943-2D215657D47B"
path-guid = "D5719B5E-B2BD-48A4-BB17-383B29B32782"
license = false
eula = false

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0.12"
crossterm = "0.29.0"
ratatui = {version = "0.29.0", default-features = false, features = ["crossterm"]}
syntect = "5.2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
