[package]
name = "docu"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/Magic-JD/docu"
homepage = "https://github.com/Magic-JD/docu"
description = "Document your favourite scriptlets for fast reference."
authors = ["Joseph Daunt"]

[package.metadata.wix]
upgrade-guid = "48661F99-A78D-4994-B8B7-E846F4E0801F"
path-guid = "F41C5C97-4825-4DEF-8B64-0B44FBE9EEAB"
license = false
eula = false

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0.12"
crossterm = "0.29.0"
ratatui = {version = "0.29.0", default-features = false, features = ["crossterm"]}
syntect = "5.2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dist.github-custom-runners]
aarch64-apple-darwin = "ubuntu-latest"
aarch64-unknown-linux-gnu = "ubuntu-latest"
aarch64-pc-windows-msvc = "ubuntu-latest"
x86_64-apple-darwin = "ubuntu-latest"
x86_64-unknown-linux-musl = "ubuntu-latest"
x86_64-pc-windows-msvc = "ubuntu-latest"
